fixed body overflow horizontal

--- a/assets/styles/component/style.scss
+++ b/assets/styles/component/style.scss
@@ -6,6 +6,7 @@ body.home {
 body {
   background: url("../../img/common/bg.png") no-repeat center top;
   background-size: cover;
+  overflow-x: hidden;
 }
 
 textarea {
